fdo#74566:DOCX: Preservation <w:br> tag for Break to Next Page

Issue :
	'Break to Next Page' gets converted to 'Page Break Before'
         in RT.

	XML diffrenece :
	- LO exports <w:br> as <w:pageBreakBefore /> in document.xml
	- The page break is written into wrong paragraph.

	Implementation :
	1] Removed implementation to export <w:pageBreakBefore />.
	2] Added a check to write <w:br> in correct paragraph.
	3] Modified code to handle SectionBreak() even if Text node
       	   has no string.
	   It is required when DOCX contains a PageBreak with footer.
	4] Written Export Unit Test case.

Change-Id: I237b9c5fdd3083b441f6e81cd8442f458eccf1a0