sw/source/filter/ww8/wrtww8.hxx
@@ -699,7 +699,7 @@ public:
     sal_uLong GetSectionLineNo( const SfxItemSet* pSet, const SwNode& rNd ) const;
 
     /// Start new section.
-    void OutputSectionBreaks( const SfxItemSet *pSet, const SwNode& rNd, bool isCellOpen = false);
+    void OutputSectionBreaks( const SfxItemSet *pSet, const SwNode& rNd, bool isCellOpen = false, bool isTextNodeEmpty = false);
 
     /// Write section properties.
     ///
